// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`g10 should export a tailwind preset 1`] = `
Object {
  "theme": Object {
    "colors": Object {
      "active-01": "#c6c6c6",
      "active-danger": "#750e13",
      "active-light-u-i": "#c6c6c6",
      "active-primary": "#002d9c",
      "active-secondary": "#6f6f6f",
      "active-tertiary": "#002d9c",
      "active-u-i": "#c6c6c6",
      "background": "#f4f4f4",
      "background-active": "#c6c6c6",
      "background-brand": "#0f62fe",
      "background-hover": "#e5e5e5",
      "background-inverse": "#393939",
      "background-inverse-hover": "#4c4c4c",
      "background-selected": "#e0e0e0",
      "background-selected-hover": "#cacaca",
      "black": "#000000",
      "blue": Object {
        "10": "#edf5ff",
        "100": "#001141",
        "20": "#d0e2ff",
        "30": "#a6c8ff",
        "40": "#78a9ff",
        "50": "#4589ff",
        "60": "#0f62fe",
        "70": "#0043ce",
        "80": "#002d9c",
        "90": "#001d6c",
      },
      "border-disabled": "#ffffff",
      "border-interactive": "#0f62fe",
      "border-inverse": "#161616",
      "border-strong": "#8d8d8d",
      "border-subtle": "#e0e0e0",
      "border-subtle-selected": "#c6c6c6",
      "brand-01": "#0f62fe",
      "brand-02": "#393939",
      "brand-03": "#0f62fe",
      "button-danger-active": "#750e13",
      "button-danger-hover": "#b81921",
      "button-danger-primary": "#da1e28",
      "button-danger-secondary": "#da1e28",
      "button-disabled": "#c6c6c6",
      "button-primary": "#0f62fe",
      "button-primary-active": "#002d9c",
      "button-primary-hover": "#0353e9",
      "button-secondary": "#393939",
      "button-secondary-active": "#6f6f6f",
      "button-secondary-hover": "#4c4c4c",
      "button-separator": "#e0e0e0",
      "button-tertiary": "#0f62fe",
      "button-tertiary-active": "#002d9c",
      "button-tertiary-hover": "#0353e9",
      "cool-gray": Object {
        "10": "#f2f4f8",
        "100": "#121619",
        "20": "#dde1e6",
        "30": "#c1c7cd",
        "40": "#a2a9b0",
        "50": "#878d96",
        "60": "#697077",
        "70": "#4d5358",
        "80": "#343a3f",
        "90": "#21272a",
      },
      "cyan": Object {
        "10": "#e5f6ff",
        "100": "#061727",
        "20": "#bae6ff",
        "30": "#82cfff",
        "40": "#33b1ff",
        "50": "#1192e8",
        "60": "#0072c3",
        "70": "#00539a",
        "80": "#003a6d",
        "90": "#012749",
      },
      "danger": "#da1e28",
      "danger-01": "#da1e28",
      "danger-02": "#da1e28",
      "decorative-01": "#e0e0e0",
      "disabled-01": "#ffffff",
      "disabled-02": "#c6c6c6",
      "disabled-03": "#8d8d8d",
      "field": "#ffffff",
      "field-01": "#ffffff",
      "field-02": "#f4f4f4",
      "field-hover": "#e5e5e5",
      "focus": "#0f62fe",
      "focus-inset": "#ffffff",
      "focus-inverse": "#ffffff",
      "gray": Object {
        "10": "#f4f4f4",
        "100": "#161616",
        "20": "#e0e0e0",
        "30": "#c6c6c6",
        "40": "#a8a8a8",
        "50": "#8d8d8d",
        "60": "#6f6f6f",
        "70": "#525252",
        "80": "#393939",
        "90": "#262626",
      },
      "green": Object {
        "10": "#defbe6",
        "100": "#071908",
        "20": "#a7f0ba",
        "30": "#6fdc8c",
        "40": "#42be65",
        "50": "#24a148",
        "60": "#198038",
        "70": "#0e6027",
        "80": "#044317",
        "90": "#022d0d",
      },
      "highlight": "#d0e2ff",
      "hover-danger": "#b81921",
      "hover-field": "#e5e5e5",
      "hover-light-u-i": "#e5e5e5",
      "hover-primary": "#0353e9",
      "hover-primary-text": "#0043ce",
      "hover-row": "#e5e5e5",
      "hover-secondary": "#4c4c4c",
      "hover-selected-u-i": "#cacaca",
      "hover-tertiary": "#0353e9",
      "hover-u-i": "#e5e5e5",
      "icon-01": "#161616",
      "icon-02": "#525252",
      "icon-03": "#ffffff",
      "icon-disabled": "#c6c6c6",
      "icon-inverse": "#ffffff",
      "icon-on-color": "#ffffff",
      "icon-on-color-disabled": "#8d8d8d",
      "icon-primary": "#161616",
      "icon-secondary": "#525252",
      "interactive": "#0f62fe",
      "interactive-01": "#0f62fe",
      "interactive-02": "#393939",
      "interactive-03": "#0f62fe",
      "interactive-04": "#0f62fe",
      "inverse-01": "#ffffff",
      "inverse-02": "#393939",
      "inverse-focus-ui": "#ffffff",
      "inverse-hover-u-i": "#4c4c4c",
      "inverse-link": "#78a9ff",
      "inverse-support-01": "#fa4d56",
      "inverse-support-02": "#42be65",
      "inverse-support-03": "#f1c21b",
      "inverse-support-04": "#4589ff",
      "layer": "#ffffff",
      "layer-accent": "#e0e0e0",
      "layer-accent-active": "#a8a8a8",
      "layer-accent-hover": "#d1d1d1",
      "layer-active": "#c6c6c6",
      "layer-hover": "#e5e5e5",
      "layer-selected": "#e0e0e0",
      "layer-selected-disabled": "#8d8d8d",
      "layer-selected-hover": "#cacaca",
      "layer-selected-inverse": "#161616",
      "link-01": "#0f62fe",
      "link-02": "#0043ce",
      "link-inverse": "#78a9ff",
      "link-primary": "#0f62fe",
      "link-primary-hover": "#0043ce",
      "link-secondary": "#0043ce",
      "link-visited": "#8a3ffc",
      "magenta": Object {
        "10": "#fff0f7",
        "100": "#2a0a18",
        "20": "#ffd6e8",
        "30": "#ffafd2",
        "40": "#ff7eb6",
        "50": "#ee5396",
        "60": "#d02670",
        "70": "#9f1853",
        "80": "#740937",
        "90": "#510224",
      },
      "orange": Object {
        "10": "#fff2e8",
        "100": "#231000",
        "20": "#ffd9be",
        "30": "#ffb784",
        "40": "#ff832b",
        "50": "#eb6200",
        "60": "#ba4e00",
        "70": "#8a3800",
        "80": "#5e2900",
        "90": "#3e1a00",
      },
      "overlay": "rgba(22, 22, 22, 0.5)",
      "overlay-01": "rgba(22, 22, 22, 0.5)",
      "purple": Object {
        "10": "#f6f2ff",
        "100": "#1c0f30",
        "20": "#e8daff",
        "30": "#d4bbff",
        "40": "#be95ff",
        "50": "#a56eff",
        "60": "#8a3ffc",
        "70": "#6929c4",
        "80": "#491d8b",
        "90": "#31135e",
      },
      "red": Object {
        "10": "#fff1f1",
        "100": "#2d0709",
        "20": "#ffd7d9",
        "30": "#ffb3b8",
        "40": "#ff8389",
        "50": "#fa4d56",
        "60": "#da1e28",
        "70": "#a2191f",
        "80": "#750e13",
        "90": "#520408",
      },
      "selected-light-u-i": "#e0e0e0",
      "selected-u-i": "#e0e0e0",
      "shadow": "rgba(0, 0, 0, 0.3)",
      "skeleton-01": "#e5e5e5",
      "skeleton-02": "#c6c6c6",
      "skeleton-background": "#e5e5e5",
      "skeleton-element": "#c6c6c6",
      "support-01": "#da1e28",
      "support-02": "#198038",
      "support-03": "#f1c21b",
      "support-04": "#0043ce",
      "support-error": "#da1e28",
      "support-error-inverse": "#fa4d56",
      "support-info": "#0043ce",
      "support-info-inverse": "#4589ff",
      "support-success": "#198038",
      "support-success-inverse": "#42be65",
      "support-warning": "#f1c21b",
      "support-warning-inverse": "#f1c21b",
      "teal": Object {
        "10": "#d9fbfb",
        "100": "#081a1c",
        "20": "#9ef0f0",
        "30": "#3ddbd9",
        "40": "#08bdba",
        "50": "#009d9a",
        "60": "#007d79",
        "70": "#005d5d",
        "80": "#004144",
        "90": "#022b30",
      },
      "text-01": "#161616",
      "text-02": "#525252",
      "text-03": "#a8a8a8",
      "text-04": "#ffffff",
      "text-05": "#6f6f6f",
      "text-disabled": "#c6c6c6",
      "text-error": "#da1e28",
      "text-helper": "#6f6f6f",
      "text-inverse": "#ffffff",
      "text-on-color": "#ffffff",
      "text-on-color-disabled": "#8d8d8d",
      "text-placeholder": "#a8a8a8",
      "text-primary": "#161616",
      "text-secondary": "#525252",
      "toggle-off": "#8d8d8d",
      "ui-01": "#ffffff",
      "ui-02": "#f4f4f4",
      "ui-03": "#e0e0e0",
      "ui-04": "#8d8d8d",
      "ui-05": "#161616",
      "ui-background": "#f4f4f4",
      "visited-link": "#8a3ffc",
      "warm-gray": Object {
        "10": "#f7f3f2",
        "100": "#171414",
        "20": "#e5e0df",
        "30": "#cac5c4",
        "40": "#ada8a8",
        "50": "#8f8b8b",
        "60": "#726e6e",
        "70": "#565151",
        "80": "#3c3838",
        "90": "#272525",
      },
      "white": "#ffffff",
      "yellow": Object {
        "10": "#fcf4d6",
        "100": "#1c1500",
        "20": "#fddc69",
        "30": "#f1c21b",
        "40": "#d2a106",
        "50": "#b28600",
        "60": "#8e6a00",
        "70": "#684e00",
        "80": "#483700",
        "90": "#302400",
      },
    },
    "fontFamily": Object {
      "mono": Array [
        "'IBM Plex Mono'",
        "'Menlo'",
        "'DejaVu Sans Mono'",
        "'Bitstream Vera Sans Mono'",
        "Courier",
        "monospace",
      ],
      "sans": Array [
        "'IBM Plex Sans'",
        "'Helvetica Neue'",
        "Arial",
        "sans-serif",
      ],
      "sans-condensed": Array [
        "'IBM Plex Sans Condensed'",
        "'Helvetica Neue'",
        "Arial",
        "sans-serif",
      ],
      "sans-hebrew": Array [
        "'IBM Plex Sans Hebrew'",
        "'Helvetica Hebrew'",
        "'Arial Hebrew'",
        "sans-serif",
      ],
      "serif": Array [
        "'IBM Plex Serif'",
        "'Georgia'",
        "Times",
        "serif",
      ],
    },
    "screens": Object {
      "extend": Object {
        "lg": "66rem",
        "max": "99rem",
        "md": "42rem",
        "sm": "20rem",
        "xlg": "82rem",
      },
    },
    "spacing": Object {
      "0": "0",
      "1": "0.125rem",
      "10": "4rem",
      "11": "5rem",
      "12": "6rem",
      "13": "10rem",
      "2": "0.25rem",
      "3": "0.5rem",
      "4": "0.75rem",
      "5": "1rem",
      "6": "1.5rem",
      "7": "2rem",
      "8": "2.5rem",
      "9": "3rem",
    },
  },
}
`;

exports[`g90 should export a tailwind preset 1`] = `
Object {
  "theme": Object {
    "colors": Object {
      "active-01": "#6f6f6f",
      "active-danger": "#750e13",
      "active-light-u-i": "#8d8d8d",
      "active-primary": "#002d9c",
      "active-secondary": "#393939",
      "active-tertiary": "#c6c6c6",
      "active-u-i": "#6f6f6f",
      "background": "#262626",
      "background-active": "#6f6f6f",
      "background-brand": "#0f62fe",
      "background-hover": "#4c4c4c",
      "background-inverse": "#f4f4f4",
      "background-inverse-hover": "#e5e5e5",
      "background-selected": "#525252",
      "background-selected-hover": "#656565",
      "black": "#000000",
      "blue": Object {
        "10": "#edf5ff",
        "100": "#001141",
        "20": "#d0e2ff",
        "30": "#a6c8ff",
        "40": "#78a9ff",
        "50": "#4589ff",
        "60": "#0f62fe",
        "70": "#0043ce",
        "80": "#002d9c",
        "90": "#001d6c",
      },
      "border-disabled": "#393939",
      "border-interactive": "#4589ff",
      "border-inverse": "#f4f4f4",
      "border-strong": "#8d8d8d",
      "border-subtle": "#525252",
      "border-subtle-selected": "#6f6f6f",
      "brand-01": "#0f62fe",
      "brand-02": "#6f6f6f",
      "brand-03": "#ffffff",
      "button-danger-active": "#750e13",
      "button-danger-hover": "#b81921",
      "button-danger-primary": "#da1e28",
      "button-danger-secondary": "#ff8389",
      "button-disabled": "#6f6f6f",
      "button-primary": "#0f62fe",
      "button-primary-active": "#002d9c",
      "button-primary-hover": "#0353e9",
      "button-secondary": "#6f6f6f",
      "button-secondary-active": "#393939",
      "button-secondary-hover": "#606060",
      "button-separator": "#161616",
      "button-tertiary": "#ffffff",
      "button-tertiary-active": "#c6c6c6",
      "button-tertiary-hover": "#f4f4f4",
      "cool-gray": Object {
        "10": "#f2f4f8",
        "100": "#121619",
        "20": "#dde1e6",
        "30": "#c1c7cd",
        "40": "#a2a9b0",
        "50": "#878d96",
        "60": "#697077",
        "70": "#4d5358",
        "80": "#343a3f",
        "90": "#21272a",
      },
      "cyan": Object {
        "10": "#e5f6ff",
        "100": "#061727",
        "20": "#bae6ff",
        "30": "#82cfff",
        "40": "#33b1ff",
        "50": "#1192e8",
        "60": "#0072c3",
        "70": "#00539a",
        "80": "#003a6d",
        "90": "#012749",
      },
      "danger": "#da1e28",
      "danger-01": "#da1e28",
      "danger-02": "#ff8389",
      "decorative-01": "#6f6f6f",
      "disabled-01": "#393939",
      "disabled-02": "#6f6f6f",
      "disabled-03": "#a8a8a8",
      "field": "#393939",
      "field-01": "#393939",
      "field-02": "#525252",
      "field-hover": "#4c4c4c",
      "focus": "#ffffff",
      "focus-inset": "#161616",
      "focus-inverse": "#0f62fe",
      "gray": Object {
        "10": "#f4f4f4",
        "100": "#161616",
        "20": "#e0e0e0",
        "30": "#c6c6c6",
        "40": "#a8a8a8",
        "50": "#8d8d8d",
        "60": "#6f6f6f",
        "70": "#525252",
        "80": "#393939",
        "90": "#262626",
      },
      "green": Object {
        "10": "#defbe6",
        "100": "#071908",
        "20": "#a7f0ba",
        "30": "#6fdc8c",
        "40": "#42be65",
        "50": "#24a148",
        "60": "#198038",
        "70": "#0e6027",
        "80": "#044317",
        "90": "#022d0d",
      },
      "highlight": "#0043ce",
      "hover-danger": "#b81921",
      "hover-field": "#4c4c4c",
      "hover-light-u-i": "#656565",
      "hover-primary": "#0353e9",
      "hover-primary-text": "#a6c8ff",
      "hover-row": "#4c4c4c",
      "hover-secondary": "#606060",
      "hover-selected-u-i": "#656565",
      "hover-tertiary": "#f4f4f4",
      "hover-u-i": "#4c4c4c",
      "icon-01": "#f4f4f4",
      "icon-02": "#c6c6c6",
      "icon-03": "#ffffff",
      "icon-disabled": "#6f6f6f",
      "icon-inverse": "#161616",
      "icon-on-color": "#ffffff",
      "icon-on-color-disabled": "#a8a8a8",
      "icon-primary": "#f4f4f4",
      "icon-secondary": "#c6c6c6",
      "interactive": "#4589ff",
      "interactive-01": "#0f62fe",
      "interactive-02": "#6f6f6f",
      "interactive-03": "#ffffff",
      "interactive-04": "#4589ff",
      "inverse-01": "#161616",
      "inverse-02": "#f4f4f4",
      "inverse-focus-ui": "#0f62fe",
      "inverse-hover-u-i": "#e5e5e5",
      "inverse-link": "#0f62fe",
      "inverse-support-01": "#da1e28",
      "inverse-support-02": "#24a148",
      "inverse-support-03": "#f1c21b",
      "inverse-support-04": "#0f62fe",
      "layer": "#393939",
      "layer-accent": "#525252",
      "layer-accent-active": "#8d8d8d",
      "layer-accent-hover": "#636363",
      "layer-active": "#6f6f6f",
      "layer-hover": "#4c4c4c",
      "layer-selected": "#525252",
      "layer-selected-disabled": "#a8a8a8",
      "layer-selected-hover": "#656565",
      "layer-selected-inverse": "#f4f4f4",
      "link-01": "#78a9ff",
      "link-02": "#a6c8ff",
      "link-inverse": "#0f62fe",
      "link-primary": "#78a9ff",
      "link-primary-hover": "#a6c8ff",
      "link-secondary": "#a6c8ff",
      "link-visited": "#be95ff",
      "magenta": Object {
        "10": "#fff0f7",
        "100": "#2a0a18",
        "20": "#ffd6e8",
        "30": "#ffafd2",
        "40": "#ff7eb6",
        "50": "#ee5396",
        "60": "#d02670",
        "70": "#9f1853",
        "80": "#740937",
        "90": "#510224",
      },
      "orange": Object {
        "10": "#fff2e8",
        "100": "#231000",
        "20": "#ffd9be",
        "30": "#ffb784",
        "40": "#ff832b",
        "50": "#eb6200",
        "60": "#ba4e00",
        "70": "#8a3800",
        "80": "#5e2900",
        "90": "#3e1a00",
      },
      "overlay": "rgba(0, 0, 0, 0.65)",
      "overlay-01": "rgba(0, 0, 0, 0.65)",
      "purple": Object {
        "10": "#f6f2ff",
        "100": "#1c0f30",
        "20": "#e8daff",
        "30": "#d4bbff",
        "40": "#be95ff",
        "50": "#a56eff",
        "60": "#8a3ffc",
        "70": "#6929c4",
        "80": "#491d8b",
        "90": "#31135e",
      },
      "red": Object {
        "10": "#fff1f1",
        "100": "#2d0709",
        "20": "#ffd7d9",
        "30": "#ffb3b8",
        "40": "#ff8389",
        "50": "#fa4d56",
        "60": "#da1e28",
        "70": "#a2191f",
        "80": "#750e13",
        "90": "#520408",
      },
      "selected-light-u-i": "#6f6f6f",
      "selected-u-i": "#525252",
      "shadow": "rgba(0, 0, 0, 0.8)",
      "skeleton-01": "#353535",
      "skeleton-02": "#525252",
      "skeleton-background": "#353535",
      "skeleton-element": "#525252",
      "support-01": "#ff8389",
      "support-02": "#42be65",
      "support-03": "#f1c21b",
      "support-04": "#4589ff",
      "support-error": "#ff8389",
      "support-error-inverse": "#da1e28",
      "support-info": "#4589ff",
      "support-info-inverse": "#0f62fe",
      "support-success": "#42be65",
      "support-success-inverse": "#24a148",
      "support-warning": "#f1c21b",
      "support-warning-inverse": "#f1c21b",
      "teal": Object {
        "10": "#d9fbfb",
        "100": "#081a1c",
        "20": "#9ef0f0",
        "30": "#3ddbd9",
        "40": "#08bdba",
        "50": "#009d9a",
        "60": "#007d79",
        "70": "#005d5d",
        "80": "#004144",
        "90": "#022b30",
      },
      "text-01": "#f4f4f4",
      "text-02": "#c6c6c6",
      "text-03": "#6f6f6f",
      "text-04": "#ffffff",
      "text-05": "#8d8d8d",
      "text-disabled": "#6f6f6f",
      "text-error": "#ffb3b8",
      "text-helper": "#8d8d8d",
      "text-inverse": "#161616",
      "text-on-color": "#ffffff",
      "text-on-color-disabled": "#a8a8a8",
      "text-placeholder": "#6f6f6f",
      "text-primary": "#f4f4f4",
      "text-secondary": "#c6c6c6",
      "toggle-off": "#8d8d8d",
      "ui-01": "#393939",
      "ui-02": "#525252",
      "ui-03": "#525252",
      "ui-04": "#8d8d8d",
      "ui-05": "#f4f4f4",
      "ui-background": "#262626",
      "visited-link": "#be95ff",
      "warm-gray": Object {
        "10": "#f7f3f2",
        "100": "#171414",
        "20": "#e5e0df",
        "30": "#cac5c4",
        "40": "#ada8a8",
        "50": "#8f8b8b",
        "60": "#726e6e",
        "70": "#565151",
        "80": "#3c3838",
        "90": "#272525",
      },
      "white": "#ffffff",
      "yellow": Object {
        "10": "#fcf4d6",
        "100": "#1c1500",
        "20": "#fddc69",
        "30": "#f1c21b",
        "40": "#d2a106",
        "50": "#b28600",
        "60": "#8e6a00",
        "70": "#684e00",
        "80": "#483700",
        "90": "#302400",
      },
    },
    "fontFamily": Object {
      "mono": Array [
        "'IBM Plex Mono'",
        "'Menlo'",
        "'DejaVu Sans Mono'",
        "'Bitstream Vera Sans Mono'",
        "Courier",
        "monospace",
      ],
      "sans": Array [
        "'IBM Plex Sans'",
        "'Helvetica Neue'",
        "Arial",
        "sans-serif",
      ],
      "sans-condensed": Array [
        "'IBM Plex Sans Condensed'",
        "'Helvetica Neue'",
        "Arial",
        "sans-serif",
      ],
      "sans-hebrew": Array [
        "'IBM Plex Sans Hebrew'",
        "'Helvetica Hebrew'",
        "'Arial Hebrew'",
        "sans-serif",
      ],
      "serif": Array [
        "'IBM Plex Serif'",
        "'Georgia'",
        "Times",
        "serif",
      ],
    },
    "screens": Object {
      "extend": Object {
        "lg": "66rem",
        "max": "99rem",
        "md": "42rem",
        "sm": "20rem",
        "xlg": "82rem",
      },
    },
    "spacing": Object {
      "0": "0",
      "1": "0.125rem",
      "10": "4rem",
      "11": "5rem",
      "12": "6rem",
      "13": "10rem",
      "2": "0.25rem",
      "3": "0.5rem",
      "4": "0.75rem",
      "5": "1rem",
      "6": "1.5rem",
      "7": "2rem",
      "8": "2.5rem",
      "9": "3rem",
    },
  },
}
`;

exports[`g100 should export a tailwind preset 1`] = `
Object {
  "theme": Object {
    "colors": Object {
      "active-01": "#525252",
      "active-danger": "#750e13",
      "active-light-u-i": "#6f6f6f",
      "active-primary": "#002d9c",
      "active-secondary": "#393939",
      "active-tertiary": "#c6c6c6",
      "active-u-i": "#525252",
      "background": "#161616",
      "background-active": "#525252",
      "background-brand": "#0f62fe",
      "background-hover": "#353535",
      "background-inverse": "#f4f4f4",
      "background-inverse-hover": "#e5e5e5",
      "background-selected": "#393939",
      "background-selected-hover": "#4c4c4c",
      "black": "#000000",
      "blue": Object {
        "10": "#edf5ff",
        "100": "#001141",
        "20": "#d0e2ff",
        "30": "#a6c8ff",
        "40": "#78a9ff",
        "50": "#4589ff",
        "60": "#0f62fe",
        "70": "#0043ce",
        "80": "#002d9c",
        "90": "#001d6c",
      },
      "border-disabled": "#262626",
      "border-interactive": "#4589ff",
      "border-inverse": "#f4f4f4",
      "border-strong": "#6f6f6f",
      "border-subtle": "#393939",
      "border-subtle-selected": "#525252",
      "brand-01": "#0f62fe",
      "brand-02": "#6f6f6f",
      "brand-03": "#ffffff",
      "button-danger-active": "#750e13",
      "button-danger-hover": "#b81921",
      "button-danger-primary": "#da1e28",
      "button-danger-secondary": "#fa4d56",
      "button-disabled": "#525252",
      "button-primary": "#0f62fe",
      "button-primary-active": "#002d9c",
      "button-primary-hover": "#0353e9",
      "button-secondary": "#6f6f6f",
      "button-secondary-active": "#393939",
      "button-secondary-hover": "#606060",
      "button-separator": "#161616",
      "button-tertiary": "#ffffff",
      "button-tertiary-active": "#c6c6c6",
      "button-tertiary-hover": "#f4f4f4",
      "cool-gray": Object {
        "10": "#f2f4f8",
        "100": "#121619",
        "20": "#dde1e6",
        "30": "#c1c7cd",
        "40": "#a2a9b0",
        "50": "#878d96",
        "60": "#697077",
        "70": "#4d5358",
        "80": "#343a3f",
        "90": "#21272a",
      },
      "cyan": Object {
        "10": "#e5f6ff",
        "100": "#061727",
        "20": "#bae6ff",
        "30": "#82cfff",
        "40": "#33b1ff",
        "50": "#1192e8",
        "60": "#0072c3",
        "70": "#00539a",
        "80": "#003a6d",
        "90": "#012749",
      },
      "danger": "#da1e28",
      "danger-01": "#da1e28",
      "danger-02": "#fa4d56",
      "decorative-01": "#525252",
      "disabled-01": "#262626",
      "disabled-02": "#525252",
      "disabled-03": "#8d8d8d",
      "field": "#262626",
      "field-01": "#262626",
      "field-02": "#393939",
      "field-hover": "#353535",
      "focus": "#ffffff",
      "focus-inset": "#161616",
      "focus-inverse": "#0f62fe",
      "gray": Object {
        "10": "#f4f4f4",
        "100": "#161616",
        "20": "#e0e0e0",
        "30": "#c6c6c6",
        "40": "#a8a8a8",
        "50": "#8d8d8d",
        "60": "#6f6f6f",
        "70": "#525252",
        "80": "#393939",
        "90": "#262626",
      },
      "green": Object {
        "10": "#defbe6",
        "100": "#071908",
        "20": "#a7f0ba",
        "30": "#6fdc8c",
        "40": "#42be65",
        "50": "#24a148",
        "60": "#198038",
        "70": "#0e6027",
        "80": "#044317",
        "90": "#022d0d",
      },
      "highlight": "#002d9c",
      "hover-danger": "#b81921",
      "hover-field": "#353535",
      "hover-light-u-i": "#4c4c4c",
      "hover-primary": "#0353e9",
      "hover-primary-text": "#a6c8ff",
      "hover-row": "#353535",
      "hover-secondary": "#606060",
      "hover-selected-u-i": "#4c4c4c",
      "hover-tertiary": "#f4f4f4",
      "hover-u-i": "#353535",
      "icon-01": "#f4f4f4",
      "icon-02": "#c6c6c6",
      "icon-03": "#ffffff",
      "icon-disabled": "#525252",
      "icon-inverse": "#161616",
      "icon-on-color": "#ffffff",
      "icon-on-color-disabled": "#8d8d8d",
      "icon-primary": "#f4f4f4",
      "icon-secondary": "#c6c6c6",
      "interactive": "#4589ff",
      "interactive-01": "#0f62fe",
      "interactive-02": "#6f6f6f",
      "interactive-03": "#ffffff",
      "interactive-04": "#4589ff",
      "inverse-01": "#161616",
      "inverse-02": "#f4f4f4",
      "inverse-focus-ui": "#0f62fe",
      "inverse-hover-u-i": "#e5e5e5",
      "inverse-link": "#0f62fe",
      "inverse-support-01": "#da1e28",
      "inverse-support-02": "#24a148",
      "inverse-support-03": "#f1c21b",
      "inverse-support-04": "#0f62fe",
      "layer": "#262626",
      "layer-accent": "#393939",
      "layer-accent-active": "#6f6f6f",
      "layer-accent-hover": "#474747",
      "layer-active": "#525252",
      "layer-hover": "#353535",
      "layer-selected": "#393939",
      "layer-selected-disabled": "#8d8d8d",
      "layer-selected-hover": "#4c4c4c",
      "layer-selected-inverse": "#f4f4f4",
      "link-01": "#78a9ff",
      "link-02": "#a6c8ff",
      "link-inverse": "#0f62fe",
      "link-primary": "#78a9ff",
      "link-primary-hover": "#a6c8ff",
      "link-secondary": "#a6c8ff",
      "link-visited": "#be95ff",
      "magenta": Object {
        "10": "#fff0f7",
        "100": "#2a0a18",
        "20": "#ffd6e8",
        "30": "#ffafd2",
        "40": "#ff7eb6",
        "50": "#ee5396",
        "60": "#d02670",
        "70": "#9f1853",
        "80": "#740937",
        "90": "#510224",
      },
      "orange": Object {
        "10": "#fff2e8",
        "100": "#231000",
        "20": "#ffd9be",
        "30": "#ffb784",
        "40": "#ff832b",
        "50": "#eb6200",
        "60": "#ba4e00",
        "70": "#8a3800",
        "80": "#5e2900",
        "90": "#3e1a00",
      },
      "overlay": "rgba(0, 0, 0, 0.65)",
      "overlay-01": "rgba(0, 0, 0, 0.65)",
      "purple": Object {
        "10": "#f6f2ff",
        "100": "#1c0f30",
        "20": "#e8daff",
        "30": "#d4bbff",
        "40": "#be95ff",
        "50": "#a56eff",
        "60": "#8a3ffc",
        "70": "#6929c4",
        "80": "#491d8b",
        "90": "#31135e",
      },
      "red": Object {
        "10": "#fff1f1",
        "100": "#2d0709",
        "20": "#ffd7d9",
        "30": "#ffb3b8",
        "40": "#ff8389",
        "50": "#fa4d56",
        "60": "#da1e28",
        "70": "#a2191f",
        "80": "#750e13",
        "90": "#520408",
      },
      "selected-light-u-i": "#525252",
      "selected-u-i": "#393939",
      "shadow": "rgba(0, 0, 0, 0.8)",
      "skeleton-01": "#353535",
      "skeleton-02": "#525252",
      "skeleton-background": "#353535",
      "skeleton-element": "#525252",
      "support-01": "#fa4d56",
      "support-02": "#42be65",
      "support-03": "#f1c21b",
      "support-04": "#4589ff",
      "support-error": "#fa4d56",
      "support-error-inverse": "#da1e28",
      "support-info": "#4589ff",
      "support-info-inverse": "#0f62fe",
      "support-success": "#42be65",
      "support-success-inverse": "#24a148",
      "support-warning": "#f1c21b",
      "support-warning-inverse": "#f1c21b",
      "teal": Object {
        "10": "#d9fbfb",
        "100": "#081a1c",
        "20": "#9ef0f0",
        "30": "#3ddbd9",
        "40": "#08bdba",
        "50": "#009d9a",
        "60": "#007d79",
        "70": "#005d5d",
        "80": "#004144",
        "90": "#022b30",
      },
      "text-01": "#f4f4f4",
      "text-02": "#c6c6c6",
      "text-03": "#6f6f6f",
      "text-04": "#ffffff",
      "text-05": "#8d8d8d",
      "text-disabled": "#525252",
      "text-error": "#ff8389",
      "text-helper": "#8d8d8d",
      "text-inverse": "#161616",
      "text-on-color": "#ffffff",
      "text-on-color-disabled": "#8d8d8d",
      "text-placeholder": "#6f6f6f",
      "text-primary": "#f4f4f4",
      "text-secondary": "#c6c6c6",
      "toggle-off": "#6f6f6f",
      "ui-01": "#262626",
      "ui-02": "#393939",
      "ui-03": "#393939",
      "ui-04": "#6f6f6f",
      "ui-05": "#f4f4f4",
      "ui-background": "#161616",
      "visited-link": "#be95ff",
      "warm-gray": Object {
        "10": "#f7f3f2",
        "100": "#171414",
        "20": "#e5e0df",
        "30": "#cac5c4",
        "40": "#ada8a8",
        "50": "#8f8b8b",
        "60": "#726e6e",
        "70": "#565151",
        "80": "#3c3838",
        "90": "#272525",
      },
      "white": "#ffffff",
      "yellow": Object {
        "10": "#fcf4d6",
        "100": "#1c1500",
        "20": "#fddc69",
        "30": "#f1c21b",
        "40": "#d2a106",
        "50": "#b28600",
        "60": "#8e6a00",
        "70": "#684e00",
        "80": "#483700",
        "90": "#302400",
      },
    },
    "fontFamily": Object {
      "mono": Array [
        "'IBM Plex Mono'",
        "'Menlo'",
        "'DejaVu Sans Mono'",
        "'Bitstream Vera Sans Mono'",
        "Courier",
        "monospace",
      ],
      "sans": Array [
        "'IBM Plex Sans'",
        "'Helvetica Neue'",
        "Arial",
        "sans-serif",
      ],
      "sans-condensed": Array [
        "'IBM Plex Sans Condensed'",
        "'Helvetica Neue'",
        "Arial",
        "sans-serif",
      ],
      "sans-hebrew": Array [
        "'IBM Plex Sans Hebrew'",
        "'Helvetica Hebrew'",
        "'Arial Hebrew'",
        "sans-serif",
      ],
      "serif": Array [
        "'IBM Plex Serif'",
        "'Georgia'",
        "Times",
        "serif",
      ],
    },
    "screens": Object {
      "extend": Object {
        "lg": "66rem",
        "max": "99rem",
        "md": "42rem",
        "sm": "20rem",
        "xlg": "82rem",
      },
    },
    "spacing": Object {
      "0": "0",
      "1": "0.125rem",
      "10": "4rem",
      "11": "5rem",
      "12": "6rem",
      "13": "10rem",
      "2": "0.25rem",
      "3": "0.5rem",
      "4": "0.75rem",
      "5": "1rem",
      "6": "1.5rem",
      "7": "2rem",
      "8": "2.5rem",
      "9": "3rem",
    },
  },
}
`;

exports[`white should export a tailwind preset 1`] = `
Object {
  "theme": Object {
    "colors": Object {
      "active-01": "#c6c6c6",
      "active-danger": "#750e13",
      "active-light-u-i": "#c6c6c6",
      "active-primary": "#002d9c",
      "active-secondary": "#6f6f6f",
      "active-tertiary": "#002d9c",
      "active-u-i": "#c6c6c6",
      "background": "#ffffff",
      "background-active": "#c6c6c6",
      "background-brand": "#0f62fe",
      "background-hover": "#e5e5e5",
      "background-inverse": "#393939",
      "background-inverse-hover": "#4c4c4c",
      "background-selected": "#e0e0e0",
      "background-selected-hover": "#cacaca",
      "black": "#000000",
      "blue": Object {
        "10": "#edf5ff",
        "100": "#001141",
        "20": "#d0e2ff",
        "30": "#a6c8ff",
        "40": "#78a9ff",
        "50": "#4589ff",
        "60": "#0f62fe",
        "70": "#0043ce",
        "80": "#002d9c",
        "90": "#001d6c",
      },
      "border-disabled": "#f4f4f4",
      "border-interactive": "#0f62fe",
      "border-inverse": "#161616",
      "border-strong": "#8d8d8d",
      "border-subtle": "#e0e0e0",
      "border-subtle-selected": "#c6c6c6",
      "brand-01": "#0f62fe",
      "brand-02": "#393939",
      "brand-03": "#0f62fe",
      "button-danger-active": "#750e13",
      "button-danger-hover": "#b81921",
      "button-danger-primary": "#da1e28",
      "button-danger-secondary": "#da1e28",
      "button-disabled": "#c6c6c6",
      "button-primary": "#0f62fe",
      "button-primary-active": "#002d9c",
      "button-primary-hover": "#0353e9",
      "button-secondary": "#393939",
      "button-secondary-active": "#6f6f6f",
      "button-secondary-hover": "#4c4c4c",
      "button-separator": "#e0e0e0",
      "button-tertiary": "#0f62fe",
      "button-tertiary-active": "#002d9c",
      "button-tertiary-hover": "#0353e9",
      "cool-gray": Object {
        "10": "#f2f4f8",
        "100": "#121619",
        "20": "#dde1e6",
        "30": "#c1c7cd",
        "40": "#a2a9b0",
        "50": "#878d96",
        "60": "#697077",
        "70": "#4d5358",
        "80": "#343a3f",
        "90": "#21272a",
      },
      "cyan": Object {
        "10": "#e5f6ff",
        "100": "#061727",
        "20": "#bae6ff",
        "30": "#82cfff",
        "40": "#33b1ff",
        "50": "#1192e8",
        "60": "#0072c3",
        "70": "#00539a",
        "80": "#003a6d",
        "90": "#012749",
      },
      "danger": "#da1e28",
      "danger-01": "#da1e28",
      "danger-02": "#da1e28",
      "decorative-01": "#e0e0e0",
      "disabled-01": "#f4f4f4",
      "disabled-02": "#c6c6c6",
      "disabled-03": "#8d8d8d",
      "field": "#f4f4f4",
      "field-01": "#f4f4f4",
      "field-02": "#ffffff",
      "field-hover": "#e5e5e5",
      "focus": "#0f62fe",
      "focus-inset": "#ffffff",
      "focus-inverse": "#ffffff",
      "gray": Object {
        "10": "#f4f4f4",
        "100": "#161616",
        "20": "#e0e0e0",
        "30": "#c6c6c6",
        "40": "#a8a8a8",
        "50": "#8d8d8d",
        "60": "#6f6f6f",
        "70": "#525252",
        "80": "#393939",
        "90": "#262626",
      },
      "green": Object {
        "10": "#defbe6",
        "100": "#071908",
        "20": "#a7f0ba",
        "30": "#6fdc8c",
        "40": "#42be65",
        "50": "#24a148",
        "60": "#198038",
        "70": "#0e6027",
        "80": "#044317",
        "90": "#022d0d",
      },
      "highlight": "#d0e2ff",
      "hover-danger": "#b81921",
      "hover-field": "#e5e5e5",
      "hover-light-u-i": "#e5e5e5",
      "hover-primary": "#0353e9",
      "hover-primary-text": "#0043ce",
      "hover-row": "#e5e5e5",
      "hover-secondary": "#4c4c4c",
      "hover-selected-u-i": "#cacaca",
      "hover-tertiary": "#0353e9",
      "hover-u-i": "#e5e5e5",
      "icon-01": "#161616",
      "icon-02": "#525252",
      "icon-03": "#ffffff",
      "icon-disabled": "#c6c6c6",
      "icon-inverse": "#ffffff",
      "icon-on-color": "#ffffff",
      "icon-on-color-disabled": "#8d8d8d",
      "icon-primary": "#161616",
      "icon-secondary": "#525252",
      "interactive": "#0f62fe",
      "interactive-01": "#0f62fe",
      "interactive-02": "#393939",
      "interactive-03": "#0f62fe",
      "interactive-04": "#0f62fe",
      "inverse-01": "#ffffff",
      "inverse-02": "#393939",
      "inverse-focus-ui": "#ffffff",
      "inverse-hover-u-i": "#4c4c4c",
      "inverse-link": "#78a9ff",
      "inverse-support-01": "#fa4d56",
      "inverse-support-02": "#42be65",
      "inverse-support-03": "#f1c21b",
      "inverse-support-04": "#4589ff",
      "layer": "#f4f4f4",
      "layer-accent": "#e0e0e0",
      "layer-accent-active": "#a8a8a8",
      "layer-accent-hover": "#d1d1d1",
      "layer-active": "#c6c6c6",
      "layer-hover": "#e5e5e5",
      "layer-selected": "#e0e0e0",
      "layer-selected-disabled": "#8d8d8d",
      "layer-selected-hover": "#cacaca",
      "layer-selected-inverse": "#161616",
      "link-01": "#0f62fe",
      "link-02": "#0043ce",
      "link-inverse": "#78a9ff",
      "link-primary": "#0f62fe",
      "link-primary-hover": "#0043ce",
      "link-secondary": "#0043ce",
      "link-visited": "#8a3ffc",
      "magenta": Object {
        "10": "#fff0f7",
        "100": "#2a0a18",
        "20": "#ffd6e8",
        "30": "#ffafd2",
        "40": "#ff7eb6",
        "50": "#ee5396",
        "60": "#d02670",
        "70": "#9f1853",
        "80": "#740937",
        "90": "#510224",
      },
      "orange": Object {
        "10": "#fff2e8",
        "100": "#231000",
        "20": "#ffd9be",
        "30": "#ffb784",
        "40": "#ff832b",
        "50": "#eb6200",
        "60": "#ba4e00",
        "70": "#8a3800",
        "80": "#5e2900",
        "90": "#3e1a00",
      },
      "overlay": "rgba(22, 22, 22, 0.5)",
      "overlay-01": "rgba(22, 22, 22, 0.5)",
      "purple": Object {
        "10": "#f6f2ff",
        "100": "#1c0f30",
        "20": "#e8daff",
        "30": "#d4bbff",
        "40": "#be95ff",
        "50": "#a56eff",
        "60": "#8a3ffc",
        "70": "#6929c4",
        "80": "#491d8b",
        "90": "#31135e",
      },
      "red": Object {
        "10": "#fff1f1",
        "100": "#2d0709",
        "20": "#ffd7d9",
        "30": "#ffb3b8",
        "40": "#ff8389",
        "50": "#fa4d56",
        "60": "#da1e28",
        "70": "#a2191f",
        "80": "#750e13",
        "90": "#520408",
      },
      "selected-light-u-i": "#e0e0e0",
      "selected-u-i": "#e0e0e0",
      "shadow": "rgba(0, 0, 0, 0.3)",
      "skeleton-01": "#e5e5e5",
      "skeleton-02": "#c6c6c6",
      "skeleton-background": "#e5e5e5",
      "skeleton-element": "#c6c6c6",
      "support-01": "#da1e28",
      "support-02": "#198038",
      "support-03": "#f1c21b",
      "support-04": "#0043ce",
      "support-error": "#da1e28",
      "support-error-inverse": "#fa4d56",
      "support-info": "#0043ce",
      "support-info-inverse": "#4589ff",
      "support-success": "#198038",
      "support-success-inverse": "#42be65",
      "support-warning": "#f1c21b",
      "support-warning-inverse": "#f1c21b",
      "teal": Object {
        "10": "#d9fbfb",
        "100": "#081a1c",
        "20": "#9ef0f0",
        "30": "#3ddbd9",
        "40": "#08bdba",
        "50": "#009d9a",
        "60": "#007d79",
        "70": "#005d5d",
        "80": "#004144",
        "90": "#022b30",
      },
      "text-01": "#161616",
      "text-02": "#525252",
      "text-03": "#a8a8a8",
      "text-04": "#ffffff",
      "text-05": "#6f6f6f",
      "text-disabled": "#c6c6c6",
      "text-error": "#da1e28",
      "text-helper": "#6f6f6f",
      "text-inverse": "#ffffff",
      "text-on-color": "#ffffff",
      "text-on-color-disabled": "#8d8d8d",
      "text-placeholder": "#a8a8a8",
      "text-primary": "#161616",
      "text-secondary": "#525252",
      "toggle-off": "#8d8d8d",
      "ui-01": "#f4f4f4",
      "ui-02": "#ffffff",
      "ui-03": "#e0e0e0",
      "ui-04": "#8d8d8d",
      "ui-05": "#161616",
      "ui-background": "#ffffff",
      "visited-link": "#8a3ffc",
      "warm-gray": Object {
        "10": "#f7f3f2",
        "100": "#171414",
        "20": "#e5e0df",
        "30": "#cac5c4",
        "40": "#ada8a8",
        "50": "#8f8b8b",
        "60": "#726e6e",
        "70": "#565151",
        "80": "#3c3838",
        "90": "#272525",
      },
      "white": "#ffffff",
      "yellow": Object {
        "10": "#fcf4d6",
        "100": "#1c1500",
        "20": "#fddc69",
        "30": "#f1c21b",
        "40": "#d2a106",
        "50": "#b28600",
        "60": "#8e6a00",
        "70": "#684e00",
        "80": "#483700",
        "90": "#302400",
      },
    },
    "fontFamily": Object {
      "mono": Array [
        "'IBM Plex Mono'",
        "'Menlo'",
        "'DejaVu Sans Mono'",
        "'Bitstream Vera Sans Mono'",
        "Courier",
        "monospace",
      ],
      "sans": Array [
        "'IBM Plex Sans'",
        "'Helvetica Neue'",
        "Arial",
        "sans-serif",
      ],
      "sans-condensed": Array [
        "'IBM Plex Sans Condensed'",
        "'Helvetica Neue'",
        "Arial",
        "sans-serif",
      ],
      "sans-hebrew": Array [
        "'IBM Plex Sans Hebrew'",
        "'Helvetica Hebrew'",
        "'Arial Hebrew'",
        "sans-serif",
      ],
      "serif": Array [
        "'IBM Plex Serif'",
        "'Georgia'",
        "Times",
        "serif",
      ],
    },
    "screens": Object {
      "extend": Object {
        "lg": "66rem",
        "max": "99rem",
        "md": "42rem",
        "sm": "20rem",
        "xlg": "82rem",
      },
    },
    "spacing": Object {
      "0": "0",
      "1": "0.125rem",
      "10": "4rem",
      "11": "5rem",
      "12": "6rem",
      "13": "10rem",
      "2": "0.25rem",
      "3": "0.5rem",
      "4": "0.75rem",
      "5": "1rem",
      "6": "1.5rem",
      "7": "2rem",
      "8": "2.5rem",
      "9": "3rem",
    },
  },
}
`;
